tests/base/invalid/SetDefine_CompileFail_2.whiley
import * from whiley.lang.*

define THIRTYTWO as 32
define TWELVE as 12

define numbers as { THIRTYTWO, TWELV }
